修改小的细节，如用户名，标签等

--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 卖姑娘的小火柴
 subtitle:
 description:
-author: John Doe
-language:
+author: 历历
+language: zh-Hans
 timezone:
 
 # URL
