--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "version": "3.5.0"
   },
   "dependencies": {
+    "gitment": "0.0.3",
     "hexo": "^3.2.0",
+    "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-migrator-rss": "^0.1.4",
     "hexo-renderer-ejs": "^0.3.0",
-    "hexo-renderer-stylus": "^0.3.1",
     "hexo-renderer-marked": "^0.3.0",
+    "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0"
   }
 }
